<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellownotepin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewTitleEditar"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/tape"
            android:text="@string/ActualizarNota"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTitleEditar"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTitleEditar"
            android:layout_alignParentStart="true"
            android:layout_marginTop="120dp"
            android:hint="@string/Titulo"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleEditar" />

        <EditText
            android:id="@+id/editTextContentEditar"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextTitleEditar"
            android:layout_marginTop="30dp"
            android:hint="@string/Contenido"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitleEditar" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextContentEditar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/green"
            android:text="@string/Guardar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextContentEditar"
            app:rippleColor="@color/rojo" />

        <ImageButton
            android:id="@+id/imagebuttonActAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="55dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSave"
            app:srcCompat="@drawable/downleft" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>